# dsa5106-convnext-extension

./: .gitignore  LICENSE  README.md  dsa5106-extension-1.ipynb  pyproject.toml
logs/: 1x1conv-ext2-log.txt  batchnorm-ext2-log.txt  log1a.txt  log1b.txt  log1c.txt  log2a_batchnorm_no_aug_converted.txt  log2b_relu.txt  log2b_relu_no_aug_converted.txt  log2c_1x1conv_no_aug_converted.txt  log3a.txt  log3a_new.txt  log3b.txt  log3c.txt  log3d.txt  metrics 3c.txt  metrics3a.txt  metrics3a_new.txt  metrics3b.txt  metrics3d.txt
notebook/: extension-1d-full-recipe.ipynb  extension-2a-batchnorm.ipynb  extension-2b-relu.ipynb  extension-3a-confusion-matrix.ipynb  extension-3a-convnext-tiny.ipynb
results/: results_from_logs.ipynb
tmp_notebook/: dsa5106-extension-1a-baseline + Std Flip and Crop.ipynb  kaggle_notebook_example.ipynb
tmp_notebook/ashley/1x1conv_ext2/: 1x1conv-ext2-no-aug.ipynb  1x1conv-ext2.ipynb
tmp_notebook/ashley/batchnorm_ext2/: batchnorm-ext2.ipynb
tmp_notebook/ashley/relu_ext2/: relu-ext2.ipynb
tmp_notebook/marco/: dsa5106-extension-3b-c-d-confusion-matrix.ipynb  dsa5106-project-extension-1a.ipynb  dsa5106-project-extension-1b.ipynb  dsa5106-project-extension-1c.ipynb  dsa5106-project-extension-1d.ipynb  log1d.txt  project-dsa5106-extension-3-resnet-2.ipynb  project-dsa5106-extension-3c (swin).ipynb  project-dsa5106-extension-3d-swin-enhanced.ipynb
utils/: logs_parser.py
